

[package]

name = "z-tokens-patterns-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_patterns_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-patterns/default",
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-patterns/development",
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-patterns/release",
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime" }
z-tokens-patterns = { path = "../patterns" }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

argparse = { version = "*", default-features = false, features = [] }


