

[package]

name = "z-tokens-patterns-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_patterns_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-patterns/default",
	"z-tokens-patterns-definitions/default",
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
	"z-tokens-runtime-hashes/default",
]

development = [
	"z-tokens-patterns/development",
	"z-tokens-patterns-definitions/development",
	"z-tokens-runtime/development",
	"z-tokens-runtime-flags/development",
	"z-tokens-runtime-hashes/default",
]

release = [
	"z-tokens-patterns/release",
	"z-tokens-patterns-definitions/release",
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
	"z-tokens-runtime-hashes/default",
]




[dependencies]

z-tokens-patterns = { path = "../patterns", optional = false, default-features = false, features = [] }
z-tokens-patterns-definitions = { path = "../patterns-definitions", optional = false, default-features = false, features = [] }

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }


