
[package]

name = "z-tokens-patterns"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_patterns"
path = "./lib.rs"




[features]

default = [
	
	"zt-patterns-all",
	
	"z-tokens-runtime/default",
]

development = [
	
	"zt-patterns-all",
	"zt-patterns-basic",
	
	"z-tokens-runtime/development",
]

release = [
	
	"zt-patterns-all",
	
	"z-tokens-runtime/release",
]


zt-patterns-all = [
	"zt-patterns-basic",
	"zt-patterns-extra",
]
zt-patterns-basic = [
	"zt-patterns-digits-basic",
	"zt-patterns-ascii",
]
zt-patterns-extra = [
	"zt-patterns-digits-extra",
	"zt-patterns-consonant-vowel",
	"zt-patterns-proquint",
	"zt-patterns-koremutake",
	"zt-patterns-mnemonic",
	"zt-patterns-bip0039",
	"zt-patterns-skey",
	"zt-patterns-pgp",
	"zt-patterns-eff-all",
	"zt-patterns-nato",
	"zt-patterns-tokens",
	"zt-patterns-uuid",
	"zt-patterns-ip",
	"zt-patterns-bytes",
	"zt-patterns-timestamp",
	"zt-patterns-flake",
]

zt-patterns-digits-all = [
	"zt-patterns-digits-basic",
	"zt-patterns-digits-extra",
]
zt-patterns-digits-basic = [
	"zt-patterns-digits-base10",
	"zt-patterns-digits-base16",
]
zt-patterns-digits-extra = [
	"zt-patterns-digits-base2",
	"zt-patterns-digits-base8",
	"zt-patterns-digits-base32",
	"zt-patterns-digits-base64",
	"zt-patterns-digits-base58",
	"zt-patterns-digits-base62",
	"zt-patterns-digits-bech32",
	"zt-patterns-digits-z85",
]
zt-patterns-digits-base10 = []
zt-patterns-digits-base2 = []
zt-patterns-digits-base8 = []
zt-patterns-digits-base16 = []
zt-patterns-digits-base32 = []
zt-patterns-digits-base64 = []
zt-patterns-digits-base58 = []
zt-patterns-digits-base62 = []
zt-patterns-digits-bech32 = []
zt-patterns-digits-z85 = []

zt-patterns-ascii = []
zt-patterns-consonant-vowel = []
zt-patterns-proquint = []
zt-patterns-koremutake = []
zt-patterns-mnemonic = []
zt-patterns-bip0039 = []
zt-patterns-skey = []
zt-patterns-pgp = []
zt-patterns-eff-all = [
	"zt-patterns-eff-large",
	"zt-patterns-eff-short",
	"zt-patterns-eff-unique",
]
zt-patterns-eff-large = []
zt-patterns-eff-short = []
zt-patterns-eff-unique = []
zt-patterns-nato = []
zt-patterns-tokens = []
zt-patterns-uuid = []
zt-patterns-ip = []
zt-patterns-bytes = []
zt-patterns-timestamp = []
zt-patterns-flake = []




[dependencies]

z-tokens-runtime = { path = "../runtime", default-features = false, features = [] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }
vrl-random = { version = "*", default-features = false, features = [] }

rand = { version = "^0.8", default-features = false, features = ["std", "std_rng", "getrandom", "small_rng"] }
num-bigint = { version = "^0.4", default-features = false, features = ["std"] }
num-traits = { version = "^0.2", default-features = false, features = ["std"] }
paste = { version = "^1.0", default-features = false, features = [] }
chrono = { version = "^0.4", default-features = false, features = ["alloc", "clock"] }
const_format = { version = "^0.2", default-features = false, features = [] }


