

[package]

name = "z-tokens-runtime-codings"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime_codings"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }

bech32 = { version = "^0.9", optional = false, default-features = false, features = ["std"] }
brotli = { version = "^3.3", optional = false, default-features = false, features = ["std"] }
bs58 = { version = "^0.4", optional = false, default-features = false, features = ["std"] }
byteorder = { version = "^1.4", optional = false, default-features = false, features = [] }
data-encoding = { version = "^2.3", optional = false, default-features = false, features = ["std"] }
mnemonic = { version = "^1.0", optional = false, default-features = false, features = [] }
qrcode = { version = "^0.12", optional = false, default-features = false, features = [] }
z85 = { version = "^3.0", optional = false, default-features = false, features = [] }


