

[package]

name = "z-tokens-runtime-codings"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime_codings"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }

bech32 = { version = "^0.11", optional = false, default-features = false, features = ["std"] }
brotli = { version = "^7.0", optional = false, default-features = false, features = ["std"] }
bs58 = { version = "^0.5", optional = false, default-features = false, features = ["std"] }
data-encoding = { version = "^2.6", optional = false, default-features = false, features = ["std"] }
mnemonic = { version = "^1.1", optional = false, default-features = false, features = [] }
qrcode = { version = "^0.14", optional = false, default-features = false, features = [] }
z85 = { version = "^3.0", optional = false, default-features = false, features = [] }


