

[package]

name = "z-tokens-runtime-crypto"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime_crypto"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-random/default",
	"z-tokens-runtime-hashes/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-random/development",
	"z-tokens-runtime-hashes/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-random/release",
	"z-tokens-runtime-hashes/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-random = { path = "../runtime-random", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }

chacha20 = { version = "^0.9", optional = false, default-features = false, features = ["std"] }
x25519-dalek = { version = "^2.0", optional = false, default-features = false, features = ["static_secrets"] }


