

[package]

name = "z-tokens-runtime-pinentry"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime_pinentry"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }

pinentry = { version = "^0.5", optional = false, default-features = false, features = [] }


