

[package]

name = "z-tokens-runtime"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime"
path = "./lib.rs"




[features]

default = []

development = []

release = [
	"zt-runtime-allocator",
]


zt-runtime-allocator = [
	"memsec",
]

zt-runtime-flags = [
	"argparse",
]




[dependencies]

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

zeroize = { version = "*", default-features = false, features = ["std", "alloc"] }

memsec = { version = "*", optional = true, default-features = false, features = ["default"] }

argparse = { version = "*", optional = true, default-features = false, features = [] }


