

[package]

name = "z-tokens-runtime"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime"
path = "./lib.rs"




[features]

default = []

development = []

release = [
	"zt-runtime-allocator",
]

zt-runtime-memory = []

zt-runtime-sensitive = [
	"zeroize",
]

zt-runtime-allocator = [
	"memsec",
]

zt-runtime-flags = [
	"vrl-cli-arguments",
]

zt-runtime-crypto = [
	"x25519-dalek",
	"blake3",
	"argon2",
	"rand",
	"constant_time_eq",
	"byteorder",
]

zt-runtime-rpc = [
	"nng",
]




[dependencies]

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

zeroize = { version = "^1.5", optional = true, default-features = false, features = ["std", "alloc"] }

memsec = { version = "^0.6", optional = true, default-features = false, features = ["default"] }

vrl-cli-arguments = { version = "*", optional = true, default-features = false, features = [] }

x25519-dalek = { version = "^2.0", optional = true, default-features = false, features = ["static_secrets"] }
blake3 = { version = "^1.3", optional = true, default-features = false, features = ["std"] }
argon2 = { version = "^0.4", optional = true, default-features = false, features = ["std"] }
rand = { version = "^0.8", optional = true, default-features = false, features = ["std", "getrandom"] }
constant_time_eq = { version = "^0.2", optional = true, default-features = false, features = [] }
byteorder = { version = "^1.4", optional = true, default-features = false, features = [] }

nng = { version = "^1.0", optional = true, default-features = false, features = [] }


