

[package]

name = "z-tokens-runtime"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_runtime"
path = "./lib.rs"




[features]

default = []

development = []

release = [
	"zt-runtime-allocator",
]

zt-runtime-allocator = []

zt-runtime-do-not-enable-this = []




[dependencies]

vrl-errors = { version = "*", optional = false, default-features = false, features = [] }
vrl-preludes = { version = "*", optional = false, default-features = false, features = [] }

constant_time_eq = { version = "^0.2", optional = false, default-features = false, features = [] }
byteorder = { version = "^1.4", optional = false, default-features = false, features = [] }
zeroize = { version = "^1.5", optional = false, default-features = false, features = ["std", "alloc"] }
memsec = { version = "^0.6", optional = false, default-features = false, features = ["default"] }

num-bigint = { version = "^0.4", optional = false, default-features = false, features = ["std"] }
num-traits = { version = "^0.2", optional = false, default-features = false, features = ["std"] }

chrono = { version = "^0.4", optional = false, default-features = false, features = ["alloc", "clock"] }
platform-info = { version = "^1.0", optional = false, default-features = false, features = [] }

paste = { version = "^1.0", optional = false, default-features = false, features = [] }
const_format = { version = "^0.2", optional = false, default-features = false, features = [] }


