

[package]

name = "z-tokens-secrets-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_secrets_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", default-features = false, features = [] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

x25519-dalek = { version = "^2.0", default-features = false, features = [] }


