

[package]

name = "z-tokens-tools"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_tools"
path = "./lib.rs"




[features]

default = [
	
	"zt-embedded-basic",
	"zt-embedded-readme",
	
	"z-tokens-patterns-tool/default",
	"z-tokens-hashes-tool/default",
	"z-tokens-encodings-tool/default",
	"z-tokens-exchange-tool/default",
	"z-tokens-oracles-tool/default",
	"z-tokens-secrets-tool/default",
	"z-tokens-runtime/default",
]

development = [
	
	"z-tokens-patterns-tool/development",
	"z-tokens-hashes-tool/development",
	"z-tokens-encodings-tool/development",
	"z-tokens-exchange-tool/development",
	"z-tokens-oracles-tool/development",
	"z-tokens-secrets-tool/development",
	"z-tokens-runtime/development",
]

release = [
	
	"zt-embedded-all",
	
	"z-tokens-patterns-tool/release",
	"z-tokens-hashes-tool/release",
	"z-tokens-encodings-tool/release",
	"z-tokens-exchange-tool/release",
#!	"z-tokens-oracles-tool/release",
#!	"z-tokens-secrets-tool/release",
	"z-tokens-runtime/release",
]


zt-embedded-all = [
	"zt-embedded-basic",
	"zt-embedded-readme",
	"zt-embedded-sbom",
	"zt-embedded-sources",
	"zt-embedded-build-meta",
]

zt-embedded-basic = [
	"zt-embedded-help",
]

zt-embedded-readme = []
zt-embedded-help = []
zt-embedded-sbom = []
zt-embedded-sources = []
zt-embedded-build-meta = []




[dependencies]

z-tokens-patterns-tool = { path = "../patterns-tool", optional = true, default-features = false, features = [] }
z-tokens-hashes-tool = { path = "../hashes-tool", optional = true, default-features = false, features = [] }
z-tokens-encodings-tool = { path = "../encodings-tool", optional = true, default-features = false, features = [] }
z-tokens-exchange-tool = { path = "../exchange-tool", optional = true, default-features = false, features = [] }
z-tokens-oracles-tool = { path = "../oracles-tool", optional = true, default-features = false, features = [] }
z-tokens-secrets-tool = { path = "../secrets-tool", optional = true, default-features = false, features = [] }
z-tokens-runtime = { path = "../runtime", optional = true, default-features = false, features = [] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

platform-info = { version = "^1.0", default-features = false, features = [] }


