

[workspace]

members = [
	"../runtime",
	"../patterns",
	"../patterns-tool",
	"../encodings-tool",
	"../hashes-tool",
	"../secrets-tool",
	"../exchange-tool",
	"../tools",
	"..",
]

resolver = "2"




[workspace.package]

version = "0.1.0"
publish = false

edition = "2021"
rust-version = "1.63"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = " GPL-3.0-or-later"

description = "z-tokens -- random tokens generation and related tools"
keywords = [
	"cli",
	"security",
	"password",
	"random",
]
categories = [
	"command-line-utilities",
	"cryptography",
	"encoding",
]

homepage = "https://github.com/volution/z-tokens"
repository = "https://github.com/volution/z-tokens"
documentation = "https://github.com/volution/z-tokens"




[patch.crates-io]

# vrl-errors = { path = "../.dependencies/volution-rust-libraries/errors" }
# vrl-preludes = { path = "../.dependencies/volution-rust-libraries/preludes" }
# vrl-random = { path = "../.dependencies/volution-rust-libraries/random" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-preludes = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-random = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }




[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
panic = "unwind"
#! split-debuginfo = "unpacked"

[profile.test]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
#! split-debuginfo = "off"

[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.dev.package."*"]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.dev.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.release.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
#! split-debuginfo = "unpacked"


