

[workspace]

members = [
	
	"../runtime",
	"../runtime-flags",
	"../runtime-random",
	"../runtime-hashes",
	"../runtime-crypto",
	"../runtime-codings",
	"../runtime-pinentry",
	"../runtime-lkkrs",
	
	"../patterns",
	"../patterns-tool",
	"../encodings",
	"../encodings-tool",
	"../hashes",
	"../hashes-tool",
	"../exchange",
	"../exchange-tool",
	"../oracles",
	"../oracles-tool",
	"../secrets",
	"../secrets-tool",
	"../tools",
	"..",
]

resolver = "2"








[workspace.package]

version = "0.4.0"
publish = false

edition = "2021"
rust-version = "1.75"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = "GPL-3.0-or-later"

description = "z-tokens -- random tokens generation and related tools"
keywords = [
	"cli",
	"security",
	"password",
	"random",
]
categories = [
	"command-line-utilities",
	"cryptography",
	"encoding",
]

homepage = "https://github.com/volution/z-tokens"
repository = "https://github.com/volution/z-tokens"
documentation = "https://github.com/volution/z-tokens"








[patch.crates-io]

# vrl-errors = { path = "../.dependencies/volution-rust-libraries/errors" }
# vrl-cli-arguments = { path = "../.dependencies/volution-rust-libraries/cli-arguments" }
# vrl-preludes = { path = "../.dependencies/volution-rust-libraries/preludes" }
# vrl-random = { path = "../.dependencies/volution-rust-libraries/random" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-preludes = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-random = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }








[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"
rpath = false
panic = "unwind"


[profile.test]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
rpath = false
split-debuginfo = "packed"


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false
panic = "abort"


[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false




[profile.dev.package."*"]
incremental = true
codegen-units = 1024
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"




[profile.dev.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"


[profile.release.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"


